tests/compile_fail/interface_macro_unsupported_constructor.rs
fn main() {
    let _ = rrtl::interface! {
        Bad {
            input data: bits(8),
        }
    };
}
